<resources>
    <string name="app_name">TradeTips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Trad Wyse</string>
    <string name="nav_header_subtitle">Welcome to TradWyse</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="left_panel_title_home">Dashboard</string>
    <string name="left_panel_title_mentors">Mentors</string>
    <string name="left_panel_title_trad_tips">Trad Tips</string>
    <string name="left_panel_title_share">Share</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stocks">Stocks</string>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="user_name">JOHN JOHNES</string>
    <string name="name_label">NAME</string>
    <string name="email_label">EMAIL</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="current_label">CURRENT</string>
    <string name="new_pwd_label">NEW</string>
    <string name="confirm_new_pwd_label">CONFIRM NEW</string>
    <string name="save">Save</string>
    <string name="today">Today</string>
    <string name="date">12/28/18 3:34 PM</string>
    <string name="action_profile">Profile</string>
    <string name="hr_ago">2 hous ago</string>
    <string name="min_ago">what if I wait for two days to buy, would it be a good stratgy?</string>
    <string name="stock_detail">Nullam ruturm metus a magna molestie,
    nibh, vitae facilisis rutrum allam ruturm metus a magna molestie,
    nibh, vitae facilisis rutrum.</string>
    <string name="time_line">Nullam ruturm metus a magna molestie,
    nibh, vitae facilisis rutrum.</string>
    <string name="login">Log In</string>
    <string name="LogOut">Log Out</string>
    <string name="createAcc">Create Account</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="Password_not_match">Password and Confirm Password don’t match.\n\nPlease try again.</string>
    <string name="Submit">Submit</string>
    <string name="TakeTour">See Demo</string>
    <string name="pwd">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="incorrect_pass">The old password is not correct.</string>
    <string name="emailandusername">Username or Email</string>
    <string name="password_updated">Your password has been successfully updated.</string>
    <string name="email_not_empty">The email address should not be empty.</string>
    <string name="password_must_contain"><![CDATA[Password must be 8 or more characters, and Include upper and lowercase letters, numbers and symbols (like, -/:@%#₹&?).]]></string>
    <string name="username_not_empty">The username should not be empty.</string>
    <string name="password_not_empty">The password should not be empty.</string>
    <string name="cnf_passnot_empty">The confirm password should not be empty.</string>
    <string name="cnf_pass_not_empty">Please confirm your password.</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="changepwd">Change Password</string>
    <string name="oldpass">Current Password</string>
    <string name="newpass">New Password</string>
    <string name="required_field">The required field should not be empty.</string>
    <string name="new_cng_pwd_same">The new password and confirm password should be the same.</string>
    <string name="oldpassempty">The old password should not be empty.</string>
    <string name="newpassempty">The new password should not be empty.</string>
    <string name="cnfpassempty">Please confirm your password.</string>
    <string name="HaveAcc">Already Have An Account?</string>
    <string name="TimeZone">IST</string>
    <string name="loginSpace">Log in</string>
    <string name="tour1Title">@string/app_name</string>
    <string name="tour1Description">The Stock Advicing Personal Assistant For Everyday People</string>
    <string name="tour2Title">@string/app_name</string>
    <string name="tour2Description">Automatically Picks Winning Socks Tailored Just For You</string>
    <string name="tour3Title">@string/app_name</string>
    <string name="tour3Description">Artificial Intelligence Runs The Numbers, And Gives You The Future Price of Stock</string>
    <string name="tour4Title">@string/app_name</string>
    <string name="tour4Description">Easy way to Trade your stock</string>
    <string name="next">Next</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="search_stocks">Search Stocks</string>
    <string name="no_result_found">No stocks found for your search</string>
    <string name="title_activity_profile_tabbed">ProfileTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="time_line_text">What if I wait two days to buy, would it be a good strategy?</string>
    <string name="please_add_stocks_using_option">Please add stocks using \'+\' option.</string>
    <string name="exit">EXIT</string>
    <string name="entry">ENTRY</string>
    <string name="term_of_use_heading"> <![CDATA[ <b>TRADETIPS,INC.</b> ]]></string>
    <string name="term_of_use_subheading"> <![CDATA[  <b>Terms of Use</b>]]></string>
    <string name="messageAlert">Message</string>
    <string name="Cancel">Cancel</string>
    <string name="RemoveTip">Remove Tip</string>
    <string name="ok">Ok</string>
    <string name="well_that_didn_t_work">Well That Didn\'t Work</string>
    <string name="try_entering_your_information_again">Try Entering Your Info Again</string>
    <string name="your_card_was_not_processed">Your card was not processed.</string>
    <string name="if_you_believe_you_have_a_problem_please_contact_your_bank">If you believe you have a problem please contact your bank</string>
    <string name="your_purchase_was_flagged_as_fraud">Your purchase was flagged as fraud</string>
    <string name="you_ve_reached_your_credit_limit">You\'ve reached your credit limit</string>
    <string name="you_have_a_large_pending_transaction">You have a large pending transaction</string>
    <string name="your_credit_card_is_expired">Your credit card is expired</string>
    <string name="you_ve_entered_the_wrong_information">You\'ve entered the wrong information</string>
    <string name="some_possible_issues">Some Possible issues</string>
    <string name="these_are_some_possible_issues">These are some possible issues</string>
</resources>