<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_dark_bg_india">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_50sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_paddng_10dp"
                android:onClick="onBackPress"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/messageAlert"
                android:textColor="@color/text_color_white"
                android:textSize="19dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/common_paddng_20dp"
            android:background="@drawable/mentor_list_item_bg_rounded"
            android:padding="@dimen/_15sdp">

            <ImageView
                android:id="@+id/ivSuccessFailure"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/close_icon" />

            <TextView
                android:id="@+id/txtMembershipMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivSuccessFailure"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/well_that_didn_t_work"
                android:textColor="@color/color_text_dark_layout"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMembershipMsg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMembershipMsg"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/your_card_was_not_processed"
                android:textColor="@color/text_color_grey"
                android:textSize="15sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/txtMembershipMsg2"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@color/text_color_grey" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:text="@string/these_are_some_possible_issues"
                android:textColor="@color/text_color_grey"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/lltext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtitle"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/close_icon_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start|center_vertical"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/you_ve_entered_the_wrong_information"
                        android:textColor="@color/color_small_text__dark_layout"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/close_icon_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start|center_vertical"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/your_credit_card_is_expired"
                        android:textColor="@color/color_small_text__dark_layout"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/close_icon_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start|center_vertical"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/you_have_a_large_pending_transaction"
                        android:textColor="@color/color_small_text__dark_layout"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/close_icon_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start|center_vertical"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/you_ve_reached_your_credit_limit"
                        android:textColor="@color/color_small_text__dark_layout"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/close_icon_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start|center_vertical"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/your_purchase_was_flagged_as_fraud"
                        android:textColor="@color/color_small_text__dark_layout"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/bottom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnTryAgainPaymentFail"
                android:layout_below="@+id/lltext"
                android:layout_gravity="left|end"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/if_you_believe_you_have_a_problem_please_contact_your_bank"
                android:textColor="@color/text_color_grey"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnTryAgainPaymentFail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/background_dark_button"
                android:text="@string/try_entering_your_information_again"
                android:textAllCaps="false"
                android:textColor="@color/color_text_dark_layout"
                android:textSize="14sp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/common_paddng_20dp"
            android:background="@drawable/success_failure_screen_bg_rounded"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/some_possible_issues"
                    android:textSize="@dimen/text_size_23"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_below="@id/tv1"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/text_color_light_grey"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_23"
                    android:textStyle="bold" />


            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
