<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_fill_white_round_border_dialog"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/RemoveTip"
        android:textColor="@color/dark_black_color"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="It’ll be gone forever."
        android:textColor="@color/dark_black_color"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/text_color_light_grey1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/Cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:text="t"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:background="@color/text_color_light_grey1" />

        <TextView
            android:id="@+id/ok_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/ok"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>
</LinearLayout>